fixes misalignment in 3155

--- a/app/assets/site/tags.styl
+++ b/app/assets/site/tags.styl
@@ -121,3 +121,8 @@
   border-width 2px
   min-width 30px
   display inline
+  
+.tag-add
+  vertical-align baseline
+  display inline-block
+  line-height 16px
